...
) {
    val date = Date(note.timestamp)
    val format = SimpleDateFormat("HH:mm d/MM/yyyy", Locale.getDefault())
    val editDate = format.format(date)
    Box(
        modifier = modifier
            .testTag("NOTE_ITEM")
    ) {
        Canvas(modifier = Modifier.matchParentSize()) {
            val clipPath = Path().apply {
                lineTo(size.width - cutCornerSize.toPx(), 0f)
                lineTo(size.width, cutCornerSize.toPx())
                lineTo(size.width, size.height)
...
